apps/deluge/Deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deluge
  labels:
    app: deluge
spec:
  replicas: 1
  selector:
    matchLabels:
      app: deluge
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: deluge
    spec:
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: deluge-config-pvc
        - name: data
          persistentVolumeClaim:
            claimName: deluge-data-pvc
      hostNetwork: true
      containers:
        - name: deluge
          image: lscr.io/linuxserver/deluge:2.0.5
          ports:
            - containerPort: 58846
            - containerPort: 8112
          imagePullPolicy: IfNotPresent
          readinessProbe:
            tcpSocket:
              port: 58846
            initialDelaySeconds: 5
            periodSeconds: 5
          livenessProbe:
            tcpSocket:
              port: 58846
            initialDelaySeconds: 60
            periodSeconds: 5
          volumeMounts:
            - name: config
              mountPath: /config
              readOnly: false
            - name: data
              mountPath: /downloads
              readOnly: false
