apps/deluge/Services.yaml
apiVersion: v1
kind: Service
metadata:
  name: deluge-tcp
  annotations:
    metallb.universe.tf/allow-shared-ip: "deluge"
spec:
  type: LoadBalancer
  loadBalancerIP: 192.168.1.158
  selector:
    app: deluge
  ports:
    - name: web
      protocol: TCP
      port: 8112
      targetPort: 8112
    - name: traffic
      protocol: TCP
      port: 6881
      targetPort: 6881
    - name: rpc
      protocol: TCP
      port: 58846
      targetPort: 58846

---
apiVersion: v1
kind: Service
metadata:
  name: deluge-udp
  annotations:
    metallb.universe.tf/allow-shared-ip: "deluge"
spec:
  type: LoadBalancer
  loadBalancerIP: 192.168.1.158
  selector:
    app: deluge
  ports:
    - name: traffic
      protocol: UDP
      port: 6881
      targetPort: 6881
