apps/deluge/Ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: deluge-ingress
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  ingressClassName: internal-nginx
  tls:
    - hosts:
        - deluge.nahue.com.ar
      secretName: deluge
  rules:
    - host: deluge.nahue.com.ar
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: deluge-tcp
                port:
                  number: 8112
